# amarantine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  cmake_uninstall.cmake.in
.github/workflows/: ci.yml
benchmarks/: benchmark.cc
docs/: PERFORMANCE_REPORT.md
examples/: amarantine_demo.cc  simple_demo.cc
include/amaranth/: amaranth.h
scripts/: fetch_libs.ps1  fetch_libs.sh
tests/: test_bytecode.cc  test_compile.cc  test_debug.cc  test_simple.cc  test_trace.cc
